styles/utilities.scss
.text-alt {
  color: var(--color-white-56);
}

.mt-auto {
  margin-top: auto;
}
.mb-1 {
  margin-block: 1rem;
}

.section-title {
  font-family: $font-primary, sans-serif;
  text-align: center;
  font-weight: 700;
  margin-bottom: 3rem;
}

.contact-us-title {
  font-family: $font-primary, sans-serif;
  text-align: center;
  font-weight: 700;
  margin-block: 3rem;
}

.mb-6 {
  margin-block: 6rem;
}

.mb-8 {
  margin-block: 8rem;
}

.mb-10 {
  margin-block: 10rem;
}

.mt-10 {
  margin-top: 10rem;
}

.caption {
  text-align: center;
}

.fw-bold {
  font-weight: 700;
}

.fw-semibold {
  font-weight: 600;
}

.fw-medium {
  font-weight: 500;
}

